@@ -1,0 +1,6 @@
+[APPLICATION]
+cycle_duration = 1 # Duration of each loop cycle in seconds.
+total_iterations = 40 # Iterations after which the program stops.
+
+[TIMER]
+frequency = 60.0 # Frequency in Hertz.
